Revert "Merge branch 'automower-API' of https://github.com/MikeTheTux/openhab-addons into MikeTheTux-automower-API"
This reverts commit 4dee09b6f83cbacec18a8e15aae9956ef285d24e, reversing
changes made to 936dc065c4dbaa40461a19d0b739162bd75ab6d2.

Signed-off-by: Michael Weger <weger.michael@gmx.net>