@@ -1,5 +1,5 @@
-/*
- * Copyright (c) 2010-2025 Contributors to the openHAB project
+/**
+ * Copyright (c) 2010-2024 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -12,17 +12,15 @@
  */
 package org.openhab.binding.growatt.internal.handler;
 
-import java.time.Duration;
-import java.time.Instant;
 import java.util.Collection;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
-import org.openhab.binding.growatt.internal.GrowattBindingConstants;
 import org.openhab.binding.growatt.internal.action.GrowattActions;
 import org.openhab.binding.growatt.internal.cloud.GrowattApiException;
 import org.openhab.binding.growatt.internal.cloud.GrowattCloud;
@@ -31,7 +29,6 @@ import org.openhab.binding.growatt.internal.dto.GrottDevice;
 import org.openhab.binding.growatt.internal.dto.GrottValues;
 import org.openhab.binding.growatt.internal.dto.helper.GrottValuesHelper;
 import org.openhab.core.library.types.QuantityType;
-import org.openhab.core.library.unit.Units;
 import org.openhab.core.thing.Bridge;
 import org.openhab.core.thing.Channel;
 import org.openhab.core.thing.ChannelUID;
@@ -106,25 +103,18 @@ public class GrowattInverterHandler extends BaseThingHandler {
 
     /**
      * Receives a collection of GrottDevice inverter objects containing potential data for this thing. If the collection
-     * contains an entry matching the things's deviceId, and it contains GrottValues and a time-stamp, then process it
-     * further. Otherwise go offline with a configuration or communication error.
+     * contains an entry matching the things's deviceId, and it contains GrottValues, then process it further. Otherwise
+     * go offline with a configuration error.
      *
      * @param inverters collection of GrottDevice objects.
      */
     public void updateInverters(Collection<GrottDevice> inverters) {
-        inverters.stream().filter(inverter -> deviceId.equals(inverter.getDeviceId())).findAny()
-                .ifPresentOrElse(thisInverter -> {
-                    GrottValues grottValues = thisInverter.getValues();
-                    Instant dtoTimeStamp = thisInverter.getTimeStamp();
-                    if (grottValues != null && dtoTimeStamp != null) {
-                        updateStatus(ThingStatus.ONLINE);
-                        updateInverterValues(grottValues);
-                        updateState(GrowattBindingConstants.CHANNEL_INVERTER_CLOCK_OFFSET, QuantityType
-                                .valueOf(Duration.between(Instant.now(), dtoTimeStamp).toSeconds(), Units.SECOND));
-                        scheduleAwaitingDataTimeoutTask();
-                    } else {
-                        updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.COMMUNICATION_ERROR);
-                    }
+        inverters.stream().filter(inverter -> deviceId.equals(inverter.getDeviceId()))
+                .map(inverter -> inverter.getValues()).filter(values -> values != null).findAny()
+                .ifPresentOrElse(values -> {
+                    updateStatus(ThingStatus.ONLINE);
+                    scheduleAwaitingDataTimeoutTask();
+                    updateInverterValues(values);
                 }, () -> {
                     updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.CONFIGURATION_ERROR);
                 });
@@ -150,10 +140,7 @@ public class GrowattInverterHandler extends BaseThingHandler {
         // find unused channels
         List<Channel> actualChannels = thing.getChannels();
         List<Channel> unusedChannels = actualChannels.stream()
-                .filter(channel -> !channelStates.containsKey(channel.getUID().getId()))
-                .filter(channel -> !GrowattBindingConstants.CHANNEL_INVERTER_CLOCK_OFFSET
-                        .equals(channel.getUID().getId()))
-                .toList();
+                .filter(channel -> !channelStates.containsKey(channel.getUID().getId())).collect(Collectors.toList());
 
         // remove unused channels
         if (!unusedChannels.isEmpty()) {
@@ -162,7 +149,8 @@ public class GrowattInverterHandler extends BaseThingHandler {
                     unusedChannels.size(), thing.getChannels().size());
         }
 
-        List<String> thingChannelIds = thing.getChannels().stream().map(channel -> channel.getUID().getId()).toList();
+        List<String> thingChannelIds = thing.getChannels().stream().map(channel -> channel.getUID().getId())
+                .collect(Collectors.toList());
 
         // update channel states
         channelStates.forEach((channelId, state) -> {
@@ -200,7 +188,7 @@ public class GrowattInverterHandler extends BaseThingHandler {
             getGrowattCloud().setupBatteryProgram(deviceId, programMode, powerLevel, stopSOC, enableAcCharging,
                     startTime, stopTime, enableProgram);
         } catch (GrowattApiException e) {
-            logger.warn("setupBatteryProgram() error '{}'", e.getMessage(), logger.isDebugEnabled() ? e : null);
+            logger.warn("setupBatteryProgram() error", e);
         }
     }
 }
